Adjustments to the UserController class methods